ola-parser/src/testdata/syntaxTests/abstract/unimplemented_functions.sol
contract A {
    fn a()  virtual;
}
// ----
// TypeError 3656: (0-47): Contract "A" should be marked as abstract.
